--- a/calculator.html
+++ b/calculator.html
@@ -13,6 +13,10 @@ function quad() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 4);
 }
+function square() {
+ var num = document.getElementById("n1");
+ num.value = Math.pow(num.value, 2);
+}
 </script>
 </head>
 <body>
@@ -23,6 +27,7 @@ function quad() {
  <button onclick="cube()"> x^3 </button>
  <button onclick="sine()"> sin(x) </button>
  <button onclick="quad()"> x^4 </button>
+ <button onclick="cube()"> x^2 </button>
  </p>
 </body>
 </html>
