--- a/calculator.html
+++ b/calculator.html
@@ -17,6 +17,10 @@ function square() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 2);
 }
+function inverse() {
+ var num = document.getElementById("n1");
+ num.value = 1/num.value;
+}
 </script>
 </head>
 <body>
@@ -28,6 +32,7 @@ function square() {
  <button onclick="sine()"> sin(x) </button>
  <button onclick="quad()"> x^4 </button>
  <button onclick="cube()"> x^2 </button>
+ <button onclick="cube()"> 1/x </button>
  </p>
 </body>
 </html>
